@@ -2,8 +2,8 @@ package io.openems.edge.scheduler.fixedorder;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.Test;
 
@@ -39,14 +39,14 @@ public class SchedulerFixedOrderImplTest {
 
 		test.next(new TestCase()); //
 		assertEquals(//
-				Arrays.asList(CTRL3_ID, CTRL1_ID), //
+				List.of(CTRL3_ID, CTRL1_ID), //
 				getControllerIds(sut));
 
 	}
 
 	private static List<String> getControllerIds(Scheduler scheduler) throws OpenemsNamedException {
 		return scheduler.getControllers().stream() //
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 }
